fix overall + dom menu collapse

--- a/assets/css/_accordion.scss
+++ b/assets/css/_accordion.scss
@@ -55,13 +55,15 @@
     width: 100%;
     max-height: 0;
     font-size: 11px;
+    padding-left: 35px;
     overflow: hidden;
     &.collapse {
       transition: all .45s ease;
     }
 
-    p {
+    a {
       color: inherit;
+      display: block;
       line-height: 20px;
       &.title {
         color: #12416b;
